--- a/index.html
+++ b/index.html
@@ -1186,7 +1186,7 @@
         addressText: "Rancho do Celso",
         naviLink: "https://goo.gl/maps/Eir3bNDdSjEec3YJA?g_st=aw",
         mapEmbedUrl: "https://www.google.com/maps?q=Rancho%20do%20Celso&output=embed",
-        phone: { groom: "010-0000-0000", bride: "010-0000-0000" },
+        phone: { groom: "+5511981451081", bride: "+5511988112997" },
         gift: {
           groomHolder: "Titular (noivo)",
           groomBank: "Banco 000-000-000000",
