--- a/index.html
+++ b/index.html
@@ -1254,7 +1254,7 @@
           nav: { info: "Informações", location: "Como chegar", gallery: "Galeria", activity: "Participar", gift: "Presentes" },
           hero: { kicker: "INVITATION", rsvp: "Confirmar presença", calendar: "Adicionar ao calendário", join: "Participar", directions: "Rotas" },
           data: {
-            local: "Dados: neste dispositivo (local)",
+            local: "Evento ao ar livre – sapato confortável recomendado",
             shared: "Dados: compartilhado (Firebase)",
             noteLocal: "Modo local. Para juntar participação de todos, ative o modo compartilhado (Firebase). (Veja o README)",
             noteShared: "Modo compartilhado. A participação de todos aparece em tempo real.",
