--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@
       <div class="wrap topbar-inner">
         <div class="brand" aria-label="Convite">
           <div class="title" id="brandTitle">Wedding Invitation</div>
-          <div class="date" id="brandDate">2026. 00. 00</div>
+          <div class="date" id="brandDate">2026. 05. 30</div>
         </div>
         <div class="topbar-right">
           <nav class="nav" aria-label="Navegação">
@@ -883,7 +883,7 @@
                 <h1 class="names">
                   <span id="groomName">Haseung Song</span>
                   <span class="and">&amp;</span>
-                  <span id="brideName">Larissa vilas boas de araujo</span>
+                  <span id="brideName">Larissa Vilas Boas de Araujo</span>
                 </h1>
                 <p class="meta" id="heroMeta">
                   2026. 05. 30 (sáb) 16:30<br />
@@ -960,7 +960,7 @@
                       <span class="sep">·</span>
                       <span id="groomContactName">Haseung Song</span>
                       <span class="sep">·</span>
-                      <a id="groomTel" href="#" style="text-decoration: underline"><span id="groomPhone">010-0000-0000</span></a>
+                      <a id="groomTel" href="#" style="text-decoration: underline"><span id="groomPhone">+5511981451081</span></a>
                     </div>
                     <div class="contact-actions">
                       <a
@@ -988,9 +988,9 @@
                     <div class="contact-main">
                       <span data-i18n="info.contact.bride">Noiva</span>
                       <span class="sep">·</span>
-                      <span id="brideContactName">Larissa vilas boas de araujo</span>
+                      <span id="brideContactName">Larissa Vilas Boas de Araujo</span>
                       <span class="sep">·</span>
-                      <a id="brideTel" href="#" style="text-decoration: underline"><span id="bridePhone">010-0000-0000</span></a>
+                      <a id="brideTel" href="#" style="text-decoration: underline"><span id="bridePhone">+5511988112997</span></a>
                     </div>
                     <div class="contact-actions">
                       <a
