--- a/index.html
+++ b/index.html
@@ -1310,12 +1310,12 @@
         addressText: "Rancho do Celso",
         naviLink: "https://goo.gl/maps/Eir3bNDdSjEec3YJA?g_st=aw",
         mapEmbedUrl: "", // 비워두면 naviLink에서 임베드용 URL을 자동 생성합니다.
-        phone: { groom: "010-0000-0000", bride: "010-0000-0000" },
+        phone: { groom: "+5511981451081", bride: "+5511988112997" },
         gift: {
-          groomHolder: "Titular (noivo)",
-          groomBank: "Banco 000-000-000000",
-          brideHolder: "Titular (noiva)",
-          brideBank: "Banco 000-000-000000",
+          groomHolder: "Haseung Song",
+          groomBank: "Nubank haseungbr@gmail.com",
+          brideHolder: "Larissa Vilas Boas de Araujo",
+          brideBank: "Nubank 32346800864",
         },
 
         // Firebase 공유 모드 (선택): README대로 세팅 후 값 입력
