--- a/index.html
+++ b/index.html
@@ -1090,7 +1090,7 @@
               <div class="hr"></div>
               <div class="kv">
                 <div class="k" data-i18n="info.note.label">Aviso</div>
-                <div class="v muted" id="infoNote">Insira informações de estacionamento/transporte.</div>
+                <div class="v muted" id="infoNote" data-i18n="info.noteText">Estacionamento no local do evento</div>
               </div>
             </div>
           </div>
@@ -1434,7 +1434,7 @@
           nav: { info: "Informações", location: "Como chegar", gallery: "Galeria", activity: "Participar", gift: "Presentes" },
           hero: { kicker: "INVITATION", rsvp: "Confirmar presença", calendar: "Adicionar ao calendário", join: "Participar", directions: "Rotas" },
           data: {
-            local: "Dados: neste dispositivo (local)",
+            local: "Evento ao ar livre – sapato confortável recomendado",
             shared: "Dados: compartilhado (Firebase)",
             noteLocal: "Modo local. Para juntar participação de todos, ative o modo compartilhado (Firebase). (Veja o README)",
             noteShared: "Modo compartilhado. A participação de todos aparece em tempo real.",
@@ -1448,8 +1448,8 @@
               text:
                 "Duas histórias que caminharam separadas agora seguem lado a lado.<br />Gostaríamos de compartilhar este começo com pessoas especiais.<br />Sua presença será uma grande alegria.",
             },
-            location: { title: "Como chegar", sub: "Substitua pelo link de incorporação (embed) do mapa do local.", route: "Abrir rotas", copy: "Copiar endereço", transitTitle: "Transporte" },
-            gallery: { title: "Galeria", sub: "Coloque fotos como `assets/gallery/01.jpg` e elas aparecerão automaticamente. (Veja o README)" },
+            location: { title: "Como chegar", sub: "Por favor, consulte o local abaixo para participar do evento.", route: "Abrir rotas", copy: "Copiar endereço", transitTitle: "Transporte" },
+            gallery: { title: "Galeria", sub: "Aqui estão as fotos dos nossos momentos especiais." },
             activity: { title: "Um momento feito por todos", sub: "Confirme presença, deixe uma mensagem e participe da “onda de felicitações”." },
             gift: { title: "Presentes", sub: "Use o botão “Copiar” para copiar os dados com segurança." },
             footer: { note: "Esta página é um único `index.html`, pronta para GitHub Pages.<br />Modo tela: adicione `?mode=screen` no final da URL." },
@@ -1462,6 +1462,7 @@
             contactBride: "Noiva",
             noteLabel: "Aviso",
             mapLinkText: "O Link",
+            noteText: "Estacionamento no local do evento",
           },
           location: {
             route: "Abrir no Google Maps",
@@ -1554,7 +1555,7 @@
           nav: { info: "안내", location: "오시는 길", gallery: "갤러리", activity: "참여", gift: "마음 전하실 곳" },
           hero: { kicker: "INVITATION", rsvp: "참석 응답", calendar: "캘린더 추가", join: "축하 참여하기", directions: "길찾기" },
           data: {
-            local: "데이터 저장: 이 기기(로컬)",
+            local: "야외 행사입니다 — 편한 신발을 추천드려요",
             shared: "데이터 저장: 공유(Firebase)",
             noteLocal: "현재는 “로컬 저장” 모드입니다. 여러 사람의 참여를 모으려면 Firebase 공유 모드를 설정해 주세요. (README 참고)",
             noteShared: "지금은 “공유 모드”입니다. 여러 사람의 참여가 실시간으로 모입니다.",
@@ -1567,8 +1568,8 @@
               title: "초대합니다",
               text: "서로 다른 길을 걸어온 두 사람이 한 길을 걷기로 했습니다.<br />소중한 분들과 함께 그 시작을 나누고 싶습니다.<br />귀한 걸음으로 자리를 빛내 주세요.",
             },
-            location: { title: "오시는 길", sub: "지도는 예식장 “공유/퍼가기”에서 받은 임베드 주소로 바꿔주세요.", route: "길찾기 링크", copy: "주소 복사", transitTitle: "교통 안내" },
-            gallery: { title: "갤러리", sub: "사진을 `assets/gallery/01.jpg` 형태로 넣으면 자동으로 표시됩니다. (README 참고)" },
+            location: { title: "오시는 길", sub: "아래 장소를 참고 해서 행사 참석 바랍니다.", route: "길찾기 링크", copy: "주소 복사", transitTitle: "교통 안내" },
+            gallery: { title: "갤러리", sub: "우리들의 특별한 순간을 담은 사진들입니다." },
             activity: { title: "함께 만드는 순간", sub: "참석 여부를 남기거나, 축하 메시지를 전해 주세요. “축하 파도” 버튼을 누르면 이 순간이 조금 더 반짝입니다." },
             gift: { title: "마음 전하실 곳", sub: "계좌번호는 “복사” 버튼으로 안전하게 복사할 수 있습니다." },
             footer: { note: "이 페이지는 단일 `index.html`로 구성되어 GitHub Pages에 바로 올릴 수 있습니다.<br />화면용 모드: URL 뒤에 `?mode=screen`" },
@@ -1581,6 +1582,7 @@
             contactBride: "신부",
             noteLabel: "안내",
             mapLinkText: "링크",
+            noteText: "행사장 내 주차가 가능합니다.",
           },
           location: {
             route: "구글 지도 열기",
