--- a/index.html
+++ b/index.html
@@ -897,6 +897,17 @@
           justify-content: flex-start;
           text-align: left;
         }
+        .contact-main {
+          flex-direction: column;
+          align-items: flex-start;
+          gap: 4px;
+        }
+        .contact-main .sep {
+          display: none;
+        }
+        .contact-main a {
+          display: inline-block;
+        }
         .contact-actions {
           width: 100%;
           justify-content: flex-end;
@@ -1010,12 +1021,12 @@
           <div class="grid2">
             <div class="card">
               <div class="kv">
-                <div class="k" data-i18n="info.date.label">Data</div>
+                <div class="k" data-i18n="info.dateLabel">Data</div>
                 <div class="v" id="infoDate">2026. 00. 00 (sáb) 00:00</div>
               </div>
               <div class="hr"></div>
               <div class="kv">
-                <div class="k" data-i18n="info.place.label">Local</div>
+                <div class="k" data-i18n="info.placeLabel">Local</div>
                 <div class="v">
                   <div id="infoPlace">Nome do local</div>
                   <div class="muted" id="infoAddr">
@@ -1034,11 +1045,11 @@
 
             <div class="card">
               <div class="kv">
-                <div class="k" data-i18n="info.contact.label">Contato</div>
+                <div class="k" data-i18n="info.contactLabel">Contato</div>
                 <div class="v">
                   <div class="contact-line">
                     <div class="contact-main">
-                      <span data-i18n="info.contact.groom">Noivo</span>
+                      <span data-i18n="info.contactGroom">Noivo</span>
                       <span class="sep">·</span>
                       <span id="groomContactName">Haseung Song</span>
                       <span class="sep">·</span>
@@ -1068,7 +1079,7 @@
 
                   <div class="contact-line">
                     <div class="contact-main">
-                      <span data-i18n="info.contact.bride">Noiva</span>
+                      <span data-i18n="info.contactBride">Noiva</span>
                       <span class="sep">·</span>
                       <span id="brideContactName">Larissa vilas boas de araujo</span>
                       <span class="sep">·</span>
@@ -1099,7 +1110,7 @@
               </div>
               <div class="hr"></div>
               <div class="kv">
-                <div class="k" data-i18n="info.note.label">Aviso</div>
+                <div class="k" data-i18n="info.noteLabel">Aviso</div>
                 <div class="v muted" id="infoNote" data-i18n="info.noteText">Estacionamento no local do evento</div>
               </div>
             </div>
@@ -1401,7 +1412,10 @@
             location: { title: "Como chegar", sub: "Por favor, consulte o local abaixo para participar do evento.", route: "Abrir rotas", copy: "Copiar endereço", transitTitle: "Transporte" },
             gallery: { title: "Galeria", sub: "Aqui estão as fotos dos nossos momentos especiais." },
             activity: { title: "Um momento feito por todos", sub: "Confirme presença, deixe uma mensagem e participe da “onda de felicitações”." },
-            gift: { title: "Presentes", sub: "Use o botão “Copiar” para copiar os dados com segurança." },
+            gift: {
+              title: "Presentes",
+              sub: "Sua presença já é muito especial para nós.<br />Caso deseje nos presentear, uma contribuição via PIX será recebida com carinho.",
+            },
             footer: { note: "Esta página é um único `index.html`, pronta para GitHub Pages.<br />Modo tela: adicione `?mode=screen` no final da URL." },
           },
           info: {
@@ -1499,7 +1513,10 @@
             location: { title: "오시는 길", sub: "아래 장소를 참고 해서 행사 참석 바랍니다.", route: "길찾기 링크", copy: "주소 복사", transitTitle: "교통 안내" },
             gallery: { title: "갤러리", sub: "우리들의 특별한 순간을 담은 사진들입니다." },
             activity: { title: "함께 만드는 순간", sub: "참석 여부를 남기거나, 축하 메시지를 전해 주세요. “축하 파도” 버튼을 누르면 이 순간이 조금 더 반짝입니다." },
-            gift: { title: "마음 전하실 곳", sub: "계좌번호는 “복사” 버튼으로 안전하게 복사할 수 있습니다." },
+            gift: {
+              title: "마음 전하실 곳",
+              sub: "함께해 주시는 것만으로도 큰 기쁨입니다.<br />혹시 마음을 전하고 싶으시다면, PIX로 따뜻한 마음을 전해주셔도 감사히 받겠습니다.",
+            },
             footer: { note: "이 페이지는 단일 `index.html`로 구성되어 GitHub Pages에 바로 올릴 수 있습니다.<br />화면용 모드: URL 뒤에 `?mode=screen`" },
           },
           info: {
