--- a/index.html
+++ b/index.html
@@ -25,13 +25,24 @@
 
     <style>
       :root {
-        --bg0: #fffdf8;
-        --bg1: #fff7ef;
-        --ink: #1f1d1a;
-        --sub: #5c5248;
-        --card: #ffffffcc;
-        --shadow: 0 18px 50px rgba(31, 29, 26, 0.1);
-        --accent: #c8a46b;
+        /* Brand */
+        --pantone-628c: #7db8c4; /* PANTONE 628 C (web approximation) */
+        --accent: #c8a46b; /* warm highlight */
+
+        /* Surfaces */
+        --bg0: #f7fcfd;
+        --bg1: #eef7f9;
+        --bg2: #ffffff;
+        --ink: #102024;
+        --sub: rgba(16, 32, 36, 0.72);
+        --line: rgba(16, 32, 36, 0.12);
+        --card: rgba(255, 255, 255, 0.78);
+        --card-strong: rgba(255, 255, 255, 0.9);
+
+        /* Effects */
+        --shadow: 0 18px 50px rgba(16, 32, 36, 0.12);
+        --shadow2: 0 12px 28px rgba(16, 32, 36, 0.1);
+        --focus: rgba(125, 184, 196, 0.42);
         --radius: 20px;
         --max: 980px;
       }
@@ -46,12 +57,25 @@
       body {
         margin: 0;
         color: var(--ink);
-        background: radial-gradient(900px 520px at 15% 0%, rgba(200, 164, 107, 0.18), transparent 60%),
-          radial-gradient(900px 520px at 90% 10%, rgba(141, 106, 61, 0.14), transparent 60%),
-          linear-gradient(180deg, var(--bg1), var(--bg0) 55%, #fff);
+        background: radial-gradient(1000px 580px at 10% -10%, rgba(125, 184, 196, 0.42), transparent 60%),
+          radial-gradient(900px 520px at 90% 0%, rgba(125, 184, 196, 0.22), transparent 62%),
+          radial-gradient(900px 560px at 60% 110%, rgba(200, 164, 107, 0.14), transparent 60%),
+          linear-gradient(180deg, var(--bg1), var(--bg0) 55%, var(--bg2));
         font-family: "Noto Sans KR", system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
+      }
+
+      /* Subtle premium grain */
+      body::before {
+        content: "";
+        position: fixed;
+        inset: 0;
+        pointer-events: none;
+        background-image: radial-gradient(rgba(16, 32, 36, 0.05) 1px, transparent 1px);
+        background-size: 3px 3px;
+        opacity: 0.08;
+        mix-blend-mode: multiply;
       }
 
       a {
@@ -81,8 +105,8 @@
         top: 0;
         z-index: 50;
         backdrop-filter: blur(14px);
-        background: rgba(255, 255, 255, 0.75);
-        border-bottom: 1px solid rgba(31, 29, 26, 0.08);
+        background: rgba(247, 252, 253, 0.78);
+        border-bottom: 1px solid rgba(16, 32, 36, 0.08);
       }
       .topbar-inner {
         display: flex;
@@ -126,8 +150,8 @@
         border: 1px solid transparent;
       }
       .nav a:hover {
-        border-color: rgba(31, 29, 26, 0.1);
-        background: rgba(255, 255, 255, 0.55);
+        border-color: rgba(16, 32, 36, 0.12);
+        background: rgba(255, 255, 255, 0.65);
         color: var(--ink);
       }
 
@@ -145,8 +169,8 @@
         gap: 6px;
         padding: 4px;
         border-radius: 999px;
-        border: 1px solid rgba(31, 29, 26, 0.12);
-        background: rgba(255, 255, 255, 0.65);
+        border: 1px solid rgba(16, 32, 36, 0.12);
+        background: rgba(255, 255, 255, 0.7);
       }
       .lang-btn {
         border: 1px solid transparent;
@@ -165,8 +189,8 @@
         color: var(--ink);
       }
       .lang-btn.active {
-        background: linear-gradient(180deg, rgba(200, 164, 107, 0.25), rgba(200, 164, 107, 0.12));
-        border-color: rgba(200, 164, 107, 0.55);
+        background: linear-gradient(180deg, rgba(125, 184, 196, 0.34), rgba(125, 184, 196, 0.14));
+        border-color: rgba(125, 184, 196, 0.55);
         color: var(--ink);
       }
 
@@ -187,7 +211,7 @@
       }
       .hero-card {
         background: var(--card);
-        border: 1px solid rgba(31, 29, 26, 0.1);
+        border: 1px solid rgba(16, 32, 36, 0.1);
         border-radius: var(--radius);
         box-shadow: var(--shadow);
         overflow: hidden;
@@ -241,8 +265,8 @@
       }
       .btn {
         appearance: none;
-        border: 1px solid rgba(31, 29, 26, 0.14);
-        background: rgba(255, 255, 255, 0.9);
+        border: 1px solid rgba(16, 32, 36, 0.14);
+        background: rgba(255, 255, 255, 0.92);
         color: var(--ink);
         border-radius: 999px;
         padding: 11px 14px;
@@ -260,24 +284,42 @@
         transform: scale(0.98);
       }
       .btn.primary {
-        border-color: rgba(200, 164, 107, 0.55);
-        background: linear-gradient(180deg, rgba(200, 164, 107, 0.18), rgba(200, 164, 107, 0.08));
+        border-color: rgba(125, 184, 196, 0.6);
+        background: linear-gradient(180deg, rgba(125, 184, 196, 0.32), rgba(255, 255, 255, 0.88));
       }
       .btn.ghost {
         background: transparent;
       }
       .btn:hover {
-        box-shadow: 0 10px 30px rgba(31, 29, 26, 0.1);
-        border-color: rgba(31, 29, 26, 0.2);
+        box-shadow: var(--shadow2);
+        border-color: rgba(16, 32, 36, 0.22);
         background: rgba(255, 255, 255, 0.95);
+      }
+      .btn:focus-visible,
+      .lang-btn:focus-visible,
+      .chip:focus-visible,
+      .poll-item:focus-visible,
+      .icon-link:focus-visible,
+      input:focus-visible,
+      textarea:focus-visible,
+      select:focus-visible {
+        outline: none;
+        box-shadow: 0 0 0 4px var(--focus);
       }
 
       .hero-media {
         position: relative;
         min-height: 320px;
-        background: radial-gradient(640px 360px at 20% 20%, rgba(200, 164, 107, 0.35), transparent 60%),
-          radial-gradient(520px 340px at 90% 35%, rgba(141, 106, 61, 0.22), transparent 62%),
-          linear-gradient(135deg, rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.5));
+        background: radial-gradient(720px 420px at 15% 20%, rgba(125, 184, 196, 0.55), transparent 62%),
+          radial-gradient(560px 380px at 90% 35%, rgba(200, 164, 107, 0.22), transparent 64%),
+          linear-gradient(135deg, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.55));
+      }
+      .hero-media::before {
+        content: "";
+        position: absolute;
+        inset: 0;
+        background: linear-gradient(180deg, rgba(247, 252, 253, 0.35), rgba(247, 252, 253, 0.05) 55%, rgba(247, 252, 253, 0.55));
+        pointer-events: none;
       }
       .hero-media::after {
         content: "";
@@ -327,6 +369,7 @@
         letter-spacing: 0.02em;
         font-size: 22px;
         margin: 0 0 12px;
+        color: rgba(16, 32, 36, 0.92);
       }
       .section-sub {
         margin: -4px 0 14px;
@@ -347,10 +390,23 @@
 
       .card {
         background: var(--card);
-        border: 1px solid rgba(31, 29, 26, 0.1);
+        border: 1px solid rgba(16, 32, 36, 0.1);
         border-radius: var(--radius);
         box-shadow: var(--shadow);
         padding: 18px 16px;
+        backdrop-filter: blur(14px);
+      }
+
+      @media (hover: hover) and (pointer: fine) {
+        .card:hover,
+        .hero-card:hover {
+          transform: translateY(-2px);
+          box-shadow: 0 26px 70px rgba(16, 32, 36, 0.14);
+        }
+        .card,
+        .hero-card {
+          transition: transform 0.18s ease, box-shadow 0.28s ease, border-color 0.28s ease;
+        }
       }
       .kv {
         display: grid;
@@ -421,7 +477,7 @@
       }
       .hr {
         height: 1px;
-        background: rgba(31, 29, 26, 0.1);
+        background: rgba(16, 32, 36, 0.1);
         margin: 14px 0;
       }
       .badge {
@@ -430,8 +486,8 @@
         align-items: center;
         padding: 8px 10px;
         border-radius: 999px;
-        border: 1px solid rgba(31, 29, 26, 0.12);
-        background: rgba(255, 255, 255, 0.7);
+        border: 1px solid rgba(16, 32, 36, 0.12);
+        background: rgba(255, 255, 255, 0.72);
         font-size: 12px;
         color: var(--sub);
         white-space: nowrap;
@@ -1414,7 +1470,7 @@
             activity: { title: "Um momento feito por todos", sub: "Confirme presença, deixe uma mensagem e participe da “onda de felicitações”." },
             gift: {
               title: "Presentes",
-              sub: "Sua presença já é muito especial para nós.<br />Caso deseje nos presentear, uma contribuição via PIX será recebida com carinho.",
+              sub: "Sua presença já é muito especial para nós. Caso deseje nos presentear, uma contribuição via PIX será recebida com carinho.",
             },
             footer: { note: "Esta página é um único `index.html`, pronta para GitHub Pages.<br />Modo tela: adicione `?mode=screen` no final da URL." },
           },
